@@ -1,5 +1,8 @@
 *** WooCommerce Payments Changelog ***
 
+= 1.x.x - 2020-xx-xx =
+* Add - Display payment method details on account subscriptions pages.
+
 = 1.4.1 - 2020-09-07 =
 * Fix - Only redirect to the onboarding screen if the plugin has been individually activated using the plugins page.
 
